-feature: Add snmp timeout warnings for lib/snmp.php
-feature: upgrade procedure made repeatable
-feature: add more table upgrade procedures and API functions: table install, column and key upgrade
-feature: path for perl/shell like path for php to be used in Data Input Methods
-feature: introduce |graph_start| and |graph_end| for use with COMMENT/GPRINT or the like

0.8.7h
//FIXME: Consolidate the change log from 0.8.7h
-bug: RRDtool fetch in Cacti fails to function propertly on rrdtool files with NaN values in the output

0.8.7h
-bug#0000401: Check for duplicate Data Source Item Names in Data Templates
-bug#0001403: 'reapply suggested names' doesn't work correctly for graphs and data sources
-bug#0001504: no newline fix
-bug#0001568: Cacti currently gives a lot of warnings of deprecated functions on PHP 5.3
-bug#0001584: Nodes on graph tree are in the wrong places, column order_key has strange values
-bug#0001626: Cacti does not pass currency symbols ($) used in labels/gprint strings to rrdtool during graph generation.
-bug#0001632: script server treats quoted arguments with spaces as multiple separate arguments
-bug#0001646: [patch] MySQL SSL connection support
-bug#0001660: Modifying data template values is not working as expected.
-bug#0001678: Adding graphs to a device fails to add entries to poller_item if using the script server 
-bug#0001768: perform consistency check on ds maximum vs. ds minimum
-bug#0001783: Graph Export: The ExportDate is wrong -> we will print current time and number of graphs, then
-bug#0001812: copying a data template ignores item templating
-bug#0001814: CLI - Add Device Script problem when SNMP Default is Disabled 
-bug#0001815: 1-minute with 5-minute crontab broken
-bug#0001816: Cannot export graph data to CSV with IE 8 (8.0.7600.16385) 
-bug#0001819: MySQL "TYPE=" command deprecated since MySQL 4.1 removed in MySQL 5.4.4  
-bug#0001826: zoomed graph views should not have auto refresh since they do not change